# ringworld_renders

./: .gitignore  CONTRIBUTING.md  Main.py  Readme.md  next_steps.md  pyproject.toml
docs/: ARCHITECTURE.md  PHYSICS_REFERENCE.md  TECHNICAL_DESIGN.md
src/ringworld_renders/: __init__.py  __main__.py  constants.py  core.py  intersections.py  main.py  rendering.py  shadows.py  ui.py  utils.py
src/ringworld_renders/tools/: visualize_shadows.py
tests/: conftest.py  test_atmospheric_model.py  test_hit_selector.py  test_material_system.py  test_performance.py  test_pipeline_integration.py  test_renderer.py  test_rim_walls.py  test_sun_occlusion.py  test_visual_features.py
