[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ringworld_renders"
version = "0.1.0"
description = "A physics engine and renderer for Ringworld megastructures"
dependencies = [
    "numpy",
    "pillow",
]

[project.scripts]
ringworld-render = "ringworld_renders.__main__:main"
