[project]
name = "ringworld-renders"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=6.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "pillow>=12.0.0",
    "pytest>=9.0.2",
]

[project.scripts]
# Temporarily disabled - use ringworld-ui instead
# ringworld-render = "ringworld_renders.ui:main"
ringworld-visualize = "ringworld_renders.tools.visualize_shadows:create_visualization"
ringworld-ui = "ringworld_renders.main:run_ui"
ringworld-verify = "ringworld_renders.main:run_verify"
ringworld-samples = "ringworld_renders.main:run_samples"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
